# bevy_new_third_person

./: .gitignore  Cargo.toml  Cargo.toml.template  Makefile  README.md  README.md.template  Trunk.toml  cargo-generate.toml  post-generate.rhai
.cargo/: config.toml
.github/workflows/: ci.yaml  release-android-google-play.yaml  release.yaml  release.yaml.template
assets/: config.config  config.ron  credits.ron  settings.ron
assets/models/: caged_matter.glb  player.glb  scene.glb
crates/asset_loading/: Cargo.toml
crates/asset_loading/src/: lib.rs  tracking.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: camera.rs  dev_tools.rs  lib.rs  settings.rs  sound.rs
crates/game/src/player/: animation.rs  control.rs  mod.rs
crates/game/src/scene/: mod.rs  skybox.rs
crates/game/src/scene/player/: animation.rs  control.rs  mod.rs
crates/models/: Cargo.toml
crates/models/src/: event_dispatch.rs  ext_traits.rs  input.rs  input_dispatch.rs  keybinding.rs  lib.rs  marker.rs  palette.rs  player.rs  pre_load.rs  primitives.rs  settings.rs
crates/player/: Cargo.toml
crates/player/src/: animation.rs  control.rs  lib.rs  sound.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs  skybox.rs
crates/screens/: Cargo.toml
crates/screens/src/: credits.rs  gameplay.rs  lib.rs  settings.rs  splash.rs  title.rs
crates/ui/: Cargo.toml
crates/ui/src/: interaction.rs  lib.rs  opts.rs  widget.rs
crates/ui/src/prefabs/: settings.rs
mobile/: Cargo.toml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: asset_tracking.rs  assets.rs  audio.rs  camera.rs  config.rs  dev_tools.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  pre_load.rs  scene.rs  skybox.rs  utils.rs
src/actions/: mod.rs
src/assets/: mod.rs  ron.rs
src/game/: audio.rs  camera.rs  input_dispatch.rs  mod.rs  player.rs  scene.rs  settings.rs  skybox.rs  sound.rs  triggers.rs
src/game/player/: animation.rs  control.rs  mod.rs
src/game/scene/: mod.rs  skybox.rs
src/game/scene/player/: animation.rs  control.rs  mod.rs
src/loading/: mod.rs  ron.rs  tracking.rs
src/screens/: credits.rs  gameover.rs  gameplay.rs  loading.rs  menu.rs  mod.rs  settings.rs  splash.rs  title.rs
src/ui/: button.rs  interaction.rs  label.rs  mod.rs  opts.rs  palette.rs  widget.rs
src/ui/widgets/: button.rs  container.rs  demo_keys.rs  label.rs  mod.rs  opts.rs
