[package]
name = "bevy_new_third_person" # ToDo
version = "0.1.1"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
exclude = ["dist", "build", "assets", "credits"]
repository = "https://github.com/olekspickle/bevy_new_third_person"
description = "Simple third person view 3D game template"

[workspace]
members = ["mobile"]

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    # "aalo",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "enhanced"
]
enhanced = [
    # new nanite-like rendering system
    "bevy/meshlet",
    # PBR specular maps
    "bevy/pbr_specular_textures"
]

[dependencies]
# TODO: use after 0.16 migration
# bevy_common_assets = {version="0.12.0", features=["ron"]}
bevy = { version = "0.16", features = [ "jpeg", "wayland", ] }

# plugins
# wireframes
# TODO: add when 0.16
# aalo = { version = "0.0.5", optional = true }

# physics
avian3d = { version = "0.2", features = ["3d", "parallel", "collider-from-mesh"] }

# camera
bevy_third_person_camera = "0.2.1"

# floating character control
bevy-tnua = "0.23"
bevy-tnua-avian3d = "0.5"

# diagnostics overlay
iyes_perf_ui = "0.5.0-rc.1"

# key bindings
leafwing-input-manager = "0.16"

# misc
ron = "0.10"
rand = { version = "0.8" }
serde = "1"
thiserror = "2.0.12"
image = "0.25.6"
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }

# TODO: delete after everyone migrates to 0.16
[patch.crates-io]
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy-tnua = { git = "https://github.com/janhohenheim/bevy-tnua", branch = "bevy-0.16" }
bevy-tnua-avian3d = { git = "https://github.com/janhohenheim/bevy-tnua", branch = "bevy-0.16" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main" }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", branch = "main" }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Compile the entire crate as one unit. Slows compile times, marginal improvements.
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[build-dependencies]
embed-resource = "1"
