[package]
name = "bevy_new_third_person"
edition = "2024"

[workspace.package]
edition = "2024"
version = "0.1.4"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
license = "MIT OR Apache-2.0 OR CC0"
exclude = ["assets"]
repository = "https://github.com/olekspickle/bevy_new_third_person"
description = "Simple third person view 3D game template with gamepad support"
keywords = ["bevy", "game", "template", "devkit", "third person", "gamedev"]

[workspace]
members = [ "crates/*" ]
resolver = "3"

[features]
default = [ "dev_native" ]
dev = [
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/dynamic_linking",         # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/track_location",          # Improve error messages coming from Bevy
]
web = []
dev_native = [
    "dev",
    "enhanced",
    "bevy/embedded_watcher",        # Enable embedded asset hot reloading for native dev builds.
    "bevy/file_watcher",            # Enable asset hot reloading for native dev builds.
    "asset_loading/dev_native",     # hot reload asset if they change
    "game/dev_native"               # dev tools like UI debug, screen transition logging and entity inspector
]
enhanced = [
    "bevy/meshlet",                 # new nanite-like rendering system
    "bevy/bevy_pbr",                # PBR
    "bevy/pbr_specular_textures",   # PBR specular maps
]

[dependencies]
audio = { path = "crates/audio" }
asset_loading = { path = "crates/asset_loading" }
game = { path = "crates/game" }
models = { path = "crates/models" }
screens = { path = "crates/screens" }
ui = { path = "crates/ui" }

bevy.workspace = true
bevy_seedling.workspace = true
bevy_simple_subsecond_system.workspace = true
# itertools.workspace = true
image.workspace = true
winit.workspace = true

[workspace.dependencies.bevy]
# version = "0.17.0-dev"
# branch = "main"
# git = "https://github.com/bevyengine/bevy"
version = "^0.16"
default-features = false
# everything except bevy_audio
features = [
    "std",
    # "zstd_rust",
    "sysinfo_plugin",
    "multi_threaded",
    "hdr",
    "smaa_luts",
    "tonemapping_luts",
    "bevy_render",
    "bevy_winit",
    "bevy_state",
    "bevy_color",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_scene",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_input_focus",
    "custom_cursor",
    "default_font",
    "animation",
    "bevy_log",
    "bevy_gilrs",
    "bevy_gizmos",
    "png",
    "jpeg",
    "webgl2",
    "x11",
    "wayland"
]

[workspace.dependencies]
# stupid gltf 180 rotation fix
bevy_fix_gltf_coordinate_system = "0.1"
bevy_fix_cursor_unlock_web = "0.1"

# hot reloading stuff
bevy_simple_subsecond_system = "0.2.0"

# plugins
avian3d = { version = "0.3", features = ["3d", "parallel", "collider-from-mesh"] } # physics

bevy_seedling = "0.4"                   # audio engine
bevy_third_person_camera = "0.3"        # 3rd person camera

bevy-tnua = "0.24"                      # floating character control
bevy-tnua-avian3d = "0.5"
bevy_enhanced_input = "0.12"            # keyboard/gamepad bindings

iyes_perf_ui = "0.5"                    # diagnostics overlay

# misc
# itertools = "0.14.0"
image = "0.25.6"
ron = "0.10"
rand = { version = "0.8" }
serde = "1"
thiserror = "2.0.12"
# Leave only high-severity logs in native build
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
# Leave only high-severity logs in web build
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }




[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
type_complexity = "allow"           # Queries may access many components, which would undesirably trigger this lint.
nonstandard_macro_braces = "warn"   # Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.

[package.metadata.bevy_cli.release] # Disable dev features for release builds.
default-features = false
[package.metadata.bevy_cli.web]     # Disable native features for web builds.
default-features = false
[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[profile.ci]                        # Optimize for build time in CI.
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
[profile.ci.package."*"]
opt-level = 0

[profile.dev]                       # Less optimization in the dev profile.
opt-level = 1
[profile.dev.package."*"]           # More optimization in the dev profile for dependencies.
opt-level = 3

[profile.dev.package.wgpu-types]    # Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
debug-assertions = false

[profile.release]
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
codegen-units = 1                   # Compile the entire crate as one unit. Slows compile times, marginal improvements.
strip = true


[profile.wasm-release]              # Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
inherits = "release"
strip = "debuginfo"                 # Strip all debugging information from the binary to slightly reduce file size.
