[package]
name = "mobile"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy_new_third_person = { path = ".." }
bevy = { version = "0.16", default-features = false, features = ["android-native-activity"] }

# See https://github.com/bevyengine/bevy/pull/12052
[target.aarch64-apple-ios-sim.dependencies]
bevy = { version = "0.16", default-features = false }

[package.metadata.android]
package = "me.olekspickle.bevygame"
apk_name = "BevyNewThirdPerson"
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Bevy New Third Person" # ToDo
