[package]
name = "asset_loading"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition = "2024"

[features]
default = [ "dev_native" ]
dev_native = [ "dev" ]
dev = [ ]

[dependencies]
models = { path = "../models" }
bevy.workspace = true
bevy_seedling.workspace = true
ron.workspace = true
serde.workspace = true
thiserror.workspace = true


[lints]
workspace = true
