[package]
name = "game"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [ "dev_native" ]
dev_native = [ "dev" ]
dev = [ ]

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
models = { path = "../models" }
ui = { path = "../ui" }

avian3d.workspace = true
bevy.workspace = true
bevy_seedling.workspace = true
bevy-tnua.workspace = true
bevy-tnua-avian3d.workspace = true
bevy_third_person_camera.workspace = true
bevy_fix_gltf_coordinate_system.workspace = true
leafwing-input-manager.workspace = true
rand.workspace = true

[lints]
workspace = true
