[package]
name = "player"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
models = { path = "../models" }

avian3d.workspace = true
bevy.workspace = true
bevy_seedling.workspace = true
bevy-tnua.workspace = true
bevy-tnua-avian3d.workspace = true
bevy_third_person_camera.workspace = true
bevy_enhanced_input.workspace = true
rand.workspace = true

[lints]
workspace = true
