[package]
name = "scene"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [ "dev_native" ]
dev_native = [ "enhanced" ]
enhanced = [ ]

[dependencies]
asset_loading = { path = "../asset_loading" }
models = { path = "../models" }

avian3d.workspace = true
bevy.workspace = true
bevy_skein.workspace = true
bevy_fix_gltf_coordinate_system.workspace = true
# bevy_seedling.workspace = true
# bevy-tnua.workspace = true
# bevy-tnua-avian3d.workspace = true
# bevy_third_person_camera.workspace = true
# bevy_enhanced_input.workspace = true

[lints]
workspace = true
