[package]
name = "screens"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [ "dev_native" ]
dev_native = [ "dev" ]
dev = [ ]

[dependencies]
bevy.workspace = true
bevy_seedling.workspace = true
models = { path = "../models" }
game = { path = "../game" }

[lints]
workspace = true
