[package]
name = "screens"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [ "dev_native" ]
dev_native = [ "dev" ]
dev = [ ]

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
game = { path = "../game" }
models = { path = "../models" }
ui = { path = "../ui" }

bevy.workspace = true
bevy_seedling.workspace = true

[lints]
workspace = true
