[package]
name = "ui"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [ "dev_native" ]
dev_native = [ "dev" ]
dev = [ ]

[dependencies]
audio = { path = "../audio" }
asset_loading = { path = "../asset_loading" }
models = { path = "../models" }

bevy.workspace = true
bevy_simple_subsecond_system.workspace = true
bevy_enhanced_input.workspace = true
bevy_seedling.workspace = true
iyes_perf_ui.workspace = true

[lints]
workspace = true
